# ChangeLog for sys-kernel/gentoo-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.323 2006/08/24 20:52:10 dsd Exp $

*gentoo-sources-2.6.17-r6 (24 Aug 2006)

  24 Aug 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.17-r6.ebuild:
  Update to Linux 2.6.17.11. Fix some ultrasparc issues. Fix alpha EV56
  Kconfig issue. Fix NFS stall bug. Update sky2 to v1.6

  11 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.17-r5.ebuild:
  Stable on sparc

*gentoo-sources-2.6.17-r5 (09 Aug 2006)

  09 Aug 2006; Christian Heim <phreak@gentoo.org>
  +gentoo-sources-2.6.17-r5.ebuild:
  Revision bump. Importing 2.6.17.8 and some fixes/feature-enhancements from
  2.6.18

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org>
  gentoo-sources-2.6.17-r4.ebuild:
  Stable on ppc.

*gentoo-sources-2.4.32-r7 (04 Aug 2006)

  04 Aug 2006; <plasmaroo@gentoo.org> -gentoo-sources-2.4.32-r5.ebuild,
  +gentoo-sources-2.4.32-r7.ebuild:
  Bump to -hf32.7.

  27 Jul 2006; Markus Rothe <corsair@gentoo.org>
  gentoo-sources-2.6.17-r4.ebuild:
  Stable on ppc64; bug #141444

  25 Jul 2006; Daniel Drake <dsd@gentoo.org>
  gentoo-sources-2.6.17-r4.ebuild:
  Stable on amd64 and x86

  24 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.16-r13.ebuild, gentoo-sources-2.6.17-r4.ebuild:
  Stable on sparc

  23 Jul 2006; <plasmaroo@gentoo.org> gentoo-sources-2.6.17-r3.ebuild:
  Stable on IA64.

*gentoo-sources-2.6.17-r4 (21 Jul 2006)

  21 Jul 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.17-r4.ebuild:
  Import some patches from the upcoming 2.6.17.7 release. Fix vesafb-tng mtrr
  module parameter. Fix various IRQ/ACPI-related problems on VIA motherboards.
  Boot/resume driver order fix. Add support for a new r8169 device, and
  Broadcom 5787 ethernet. Update to sky2 v1.5.

  15 Jul 2006; Daniel Drake <dsd@gentoo.org>