@@ -26,6 +26,8 @@ DIST genpatches-2.6.17-6.base.tar.bz2 33142 RMD160 53aa4c81e54e32ee9df9d2a37923f
 DIST genpatches-2.6.17-6.extras.tar.bz2 195052 RMD160 3004add58b745b2eb5bcf7341a008f952f7fe013 SHA1 b649d8562dbf4774ff1e9e4cee2dccebbf04565b SHA256 4691aca3dc5e56545b6c9f00433149882718d46338bb8373a134e8d47d5115f1
 DIST genpatches-2.6.17-8.base.tar.bz2 43000 RMD160 48058470e24dd70c9184bf044b8b42a7bd83e05a SHA1 462769a15274e3195cf2fcd62c50b6ddd7f1ef26 SHA256 9a707a5073212bb1765fcfe87ff180aa807281a7773f1cb248187d440d31ba1e
 DIST genpatches-2.6.17-8.extras.tar.bz2 195119 RMD160 89a2a4e2c033544b3410eb9c766d79066391a54e SHA1 15b7a2772879f5f52df56bbd6261988a544ee6f6 SHA256 c688fe49e5e8b90de7ba0f8c928e994eb16448fe1b4a21554c9bf22ba15aff91
+DIST genpatches-2.6.17-9.base.tar.bz2 43339 RMD160 ede64d1839e9b98d1f3d84aa85ab97a41d1a03a5 SHA1 d0b2e8c2e27ff65a0435023d3e1913093d1abd52 SHA256 ce44272a572d311fb0ea61e1b4e6f636463b602215538c9ad2a1a5779fa7d3f6
+DIST genpatches-2.6.17-9.extras.tar.bz2 195156 RMD160 afa7522027d27438e6a51129cce5d8383294ccc2 SHA1 0f8f704b6cd13dc6dcb91445c48908d7a4bdaa8f SHA256 01f08328fbe9edc6e2ec9739ad340b34d8c46f4e673b3db998d21217510bc817
 DIST gentoo-sources-2.4.32-r6.tar.bz2 927324 RMD160 871bcf502bb969fcc5740ffd159e6a66943fa751 SHA1 521ccdeb50a9109bd7029e10bfadbad38658d25c SHA256 4df49c1edf980ee827888cd25bdc0e1203751718d46fc53de3b5c6d03bd04c41
 DIST gentoo-sources-2.4.32-r7.tar.bz2 933443 RMD160 7e0ded7d66bc060a78bb6c0df437478f6e61e0c9 SHA1 cfdc67358c07319f82edb3dc294820b962d7376f SHA256 2b0874521a9fa3b443b4845ece05e64b1677635468ec8a0e762c7cd66f27674a
 DIST linux-2.4.32.tar.bz2 31132159 RMD160 63ab1a0b18e690170f60de9da7392416311dc609 SHA1 0a99d7ab1d2799168d11689b4a2410b045592cf4 SHA256 7dace89c3f0850c3d5c32c38c20b600259c314e8cbec29fe3ee59c2fbbee1759
@@ -76,14 +78,18 @@ EBUILD gentoo-sources-2.6.17-r6.ebuild 1222 RMD160 e4ac127f68ea9e128af45f97f09c9
 MD5 886f34bb9c06ca350914b079d79e98d3 gentoo-sources-2.6.17-r6.ebuild 1222
 RMD160 e4ac127f68ea9e128af45f97f09c9a4b6242cbed gentoo-sources-2.6.17-r6.ebuild 1222
 SHA256 a43ddbbb96e496a2368eadcfac415a3f6e9f7d4fea9cdaf715745d090ff43583 gentoo-sources-2.6.17-r6.ebuild 1222
+EBUILD gentoo-sources-2.6.17-r7.ebuild 1222 RMD160 a20dc4b2f443922ed808995ac48436d99e27933f SHA1 3806450eb9605ad1d94fbb51c6f8241578b336bd SHA256 261f55b711579f95eedc533a686abdc4efa2036c667116920b5a41303ae00ea5
+MD5 fa885ae3747c418bcf7a7a9409c1f60b gentoo-sources-2.6.17-r7.ebuild 1222
+RMD160 a20dc4b2f443922ed808995ac48436d99e27933f gentoo-sources-2.6.17-r7.ebuild 1222
+SHA256 261f55b711579f95eedc533a686abdc4efa2036c667116920b5a41303ae00ea5 gentoo-sources-2.6.17-r7.ebuild 1222
 EBUILD gentoo-sources-2.6.17.ebuild 1219 RMD160 1599f83276ece40ce2e3be4355c5e17e9686c9b7 SHA1 6dfe62f0c6d2fc5c48b5b2caa8025bc26ca8e9c3 SHA256 51d651d432c40d1b657de027281e2bfdca61ba6604a977a59f9184708b6350b6
 MD5 db767bb01c8362a76ce276713b7fb088 gentoo-sources-2.6.17.ebuild 1219
 RMD160 1599f83276ece40ce2e3be4355c5e17e9686c9b7 gentoo-sources-2.6.17.ebuild 1219
 SHA256 51d651d432c40d1b657de027281e2bfdca61ba6604a977a59f9184708b6350b6 gentoo-sources-2.6.17.ebuild 1219
-MISC ChangeLog 70247 RMD160 806262c2a2091cd2e1bbf361f72b2865a2f276c9 SHA1 c59c45553bab243a45caba5d80cf22f7528399b3 SHA256 ddcd9048893a8e25dadb82644498e45393c1e7473b0ebda2e3936a59ec7d338f
-MD5 c45b7177ac659785a2d776c6ef33da68 ChangeLog 70247
-RMD160 806262c2a2091cd2e1bbf361f72b2865a2f276c9 ChangeLog 70247
-SHA256 ddcd9048893a8e25dadb82644498e45393c1e7473b0ebda2e3936a59ec7d338f ChangeLog 70247
+MISC ChangeLog 70440 RMD160 e19f9a91a7ef3f501e01b8ac1ed273e1c36b364c SHA1 4ceba1010875fc935e8bc2ad1ee5d8ca2196fd55 SHA256 968a2b4e2ff2fb35fa8e20e1c2a706bb71412b7dfea1bf025fe87370127ec44b
+MD5 3edd652372778e734b254175dcca677a ChangeLog 70440
+RMD160 e19f9a91a7ef3f501e01b8ac1ed273e1c36b364c ChangeLog 70440
+SHA256 968a2b4e2ff2fb35fa8e20e1c2a706bb71412b7dfea1bf025fe87370127ec44b ChangeLog 70440
 MISC metadata.xml 283 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 SHA1 6f848a776c16d39a04d9a363fd14bf5ca15e7d42 SHA256 16eda12305d2f4dba1a5650d79f49204d23c82de0d9883424dc74b3d372e45e2
 MD5 410c3afeb274354a7ce68257edc18012 metadata.xml 283
 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 metadata.xml 283
@@ -124,3 +130,6 @@ SHA256 2f3c53805efe1e20ae417ce449da4907f784a49d172afc91d28e0f6af75d3cdc files/di
 MD5 18506ab06c97e1496acf51e3df6797d8 files/digest-gentoo-sources-2.6.17-r6 804
 RMD160 3250ab1a3079318aa016831c0b7fbe1abfd63019 files/digest-gentoo-sources-2.6.17-r6 804
 SHA256 92937d1a24fb4fdc5456e1e267de39334b386c14dd1c7f192b8b169c325575ac files/digest-gentoo-sources-2.6.17-r6 804
+MD5 781068da7f47cc892843f23cc3bea747 files/digest-gentoo-sources-2.6.17-r7 804
+RMD160 0bf45301d494dc7a136c38354036dce49dcd38f8 files/digest-gentoo-sources-2.6.17-r7 804
+SHA256 dcdc62e1b79dd4a6dbe932b2da1cac705dc51f92436a5289c2a2a003c8207ab6 files/digest-gentoo-sources-2.6.17-r7 804
