@@ -1,0 +1,9 @@
+MD5 57512b381b842f03328fa4b48cbcd6b7 genpatches-2.6.17-9.base.tar.bz2 43339
+RMD160 ede64d1839e9b98d1f3d84aa85ab97a41d1a03a5 genpatches-2.6.17-9.base.tar.bz2 43339
+SHA256 ce44272a572d311fb0ea61e1b4e6f636463b602215538c9ad2a1a5779fa7d3f6 genpatches-2.6.17-9.base.tar.bz2 43339
+MD5 fa4c2de35ef129095844656e9ca24062 genpatches-2.6.17-9.extras.tar.bz2 195156
+RMD160 afa7522027d27438e6a51129cce5d8383294ccc2 genpatches-2.6.17-9.extras.tar.bz2 195156
+SHA256 01f08328fbe9edc6e2ec9739ad340b34d8c46f4e673b3db998d21217510bc817 genpatches-2.6.17-9.extras.tar.bz2 195156
+MD5 37ddefe96625502161f075b9d907f21e linux-2.6.17.tar.bz2 41272919
+RMD160 26aad30c9a6610665c6c7d62401d79bf56a6a699 linux-2.6.17.tar.bz2 41272919
+SHA256 ab0f647d52f124958439517df9e1ae0efda90cdb851f59f522fa1749f1d87d58 linux-2.6.17.tar.bz2 41272919
