@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.323 2006/08/24 20:52:10 dsd Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.324 2006/08/29 03:48:53 dsd Exp $
+
+*gentoo-sources-2.6.17-r7 (28 Aug 2006)
+
+  28 Aug 2006; Daniel Drake <dsd@gentoo.org>
+  +gentoo-sources-2.6.17-r7.ebuild:
+  Readd VIA IRQ quirk patch which was accidently dropped in 2.6.17-r5
 
 *gentoo-sources-2.6.17-r6 (24 Aug 2006)
 
